--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="" />
 		<meta name="author" content="Gyorgi Kirkov" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./Styles/main.css" />
+		<link rel="stylesheet" href="./styles/main.css" />
     	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	 
 		 
