--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</nav>
 			<main>
 				<div class="main-wrapper">
-					<img class="logo" src="./images/Logo.png" alt="logo"/>
+					<img class="logo" src="./Images/Logo.png" alt="logo"/>
 					<div class="polygons-wrapper">
 							<div class="join-artist-wrapper">
 								<div class="join-artist">
@@ -64,7 +64,7 @@
 	<nav>
 		<div class="nav-wrapper">
 			<div class="logo-title">
-				<a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="title">StreetARTists</p>
 			</div>
 			<div class="auciton-icon">
@@ -274,7 +274,7 @@
 		<div class="nav-wrapper">
 
 			<div class="logo-title">
-				<a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="title">StreetARTists</p>
 			</div>
 
@@ -352,7 +352,7 @@
 	<nav>
 		<div class="nav-wrapper">
 			<div class="logo-title">
-				<a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="artist-name" href="#landing_page"></p>
 			</div>
 			<button class="bars-button">
@@ -420,7 +420,7 @@
 	<nav>
 		<div class="nav-wrapper">
 			<div class="logo-title">
-				<a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="artist-name" href="#landing_page"></p>
 			</div>
 
@@ -456,7 +456,7 @@
 	<nav>
 		<div class="nav-wrapper">
 			<div class="logo-title">
-				<a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="artist-name" href="#landing_page"></p>
 			</div>
 
@@ -551,7 +551,7 @@
 	<nav>
 		<div class="nav-wrapper">
 			<div class="logo-title">
-				<a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="artist-name" href="#landing_page"> </p>
 			</div>
 
@@ -580,7 +580,7 @@
 <section class="page" id="artistHomePage">
     <nav class="myNavbar text-center p-2 d-flex justify-content-between align-items-center bg-primary-color">
       <div class="d-flex">
-        <img src="./img/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
+        <img src="./Images/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
         <p class="nav-title primary-text-color secondary-font-family margin-left-80 artistName"></p>
       </div>
 
@@ -658,7 +658,7 @@
   <section class="page bg-secondary-color" id="artistItemPage">
     <nav class="myNavbar text-center p-2 d-flex justify-content-between align-items-center bg-primary-color">
       <div class="d-flex">
-        <img src="./img/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
+        <img src="./Images/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
         <p class="nav-title primary-text-color secondary-font-family margin-left-80 artistName"></p>
       </div>
 
@@ -708,7 +708,7 @@
       id="collapsibleNavbarAddNewItem">
       <nav class="myNavbar text-center p-2 d-flex justify-content-between align-items-center bg-primary-color">
         <div class="d-flex">
-          <img src="./img/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
+          <img src="./Images/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
           <p class="nav-title primary-text-color secondary-font-family margin-left-80 artistName"></p>
         </div>
 
@@ -842,7 +842,7 @@
   <section class="page bg-tertiary-color min-height-100vh" id="snapshotPage">
     <nav class="myNavbar text-center p-2 d-flex justify-content-between align-items-center bg-primary-color">
       <div class="d-flex">
-        <img src="./img/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
+        <img src="./Images/Logo.png" alt="" class="pixels logoBackToLoadingPage" />
         <p class="nav-title primary-text-color secondary-font-family margin-left-80 artistName"></p>
       </div>
 
@@ -895,7 +895,7 @@
 <section class="auctionSingin page" id="auctionSingin">
 	
 	<div class="nav-wrapper-singIn">
-		<div class="logosingInsingUp"><a href=""><img class="logo" src="./images/Logo.png" alt="logo"/></a></div>
+		<div class="logosingInsingUp"><a href=""><img class="logo" src="./Images/Logo.png" alt="logo"/></a></div>
 		<p class="title-singIn">StreetARTists</p>
 	</div>
 		<div class="singInBox"></div>
@@ -963,7 +963,7 @@
 		<div class="nav-wrapper">
 
 			<div class="logo-title">
-				<a href="#"><img class="logo" src="./images/Logo.png" alt="logo"/></a>
+				<a href="#"><img class="logo" src="./Images/Logo.png" alt="logo"/></a>
 				<p class="title">StreetARTists</p>
 			</div>
 
